--- a/HTML_Portfolio_Project.html
+++ b/HTML_Portfolio_Project.html
@@ -10,7 +10,6 @@
            background-color: aqua;
         }
     </style>
-    <title>My Website</title>
 </head>
 <body>
   <h1 style="color:rgb(45, 146, 247);">Welcome to Home for Rent</h1>
@@ -22,13 +21,13 @@
           <div class="container-fluid">
              <ul class="navbar-nav me-auto">
                <br><li class="nav-item active">
-                 <a class="nav-link text-center" href="#">HOME </a></br>
+                 <a class="nav-link text-center" href="#HOME">HOME </a></br>
                 </li>
                 <br><li class="nav-item active">
-                  <a class="nav-link" href="#">ABOUT</a></br>
+                  <a class="nav-link" href="#ABOUT">ABOUT</a></br>
                 </li>
                 <br><li class="nav-item active">
-                    <a class="nav-link" href="#">CONTACT</a></br>
+                    <a class="nav-link" href="#CONTACT">CONTACT</a></br>
                 </li> 
             </ul>
             <div class="row" id="CONTACT"></div>
@@ -47,8 +46,8 @@
          <div class="container">
             <div class="row">
               <div class="col">
-               <br><img src="C:\Users\Rodil\Documents\Desktop\PortfolioProject\room.jfif" class="rounded float-start" alt="This is me"> </br> </div>
-               <br> <img src="C:\Users\Rodil\Documents\Desktop\PortfolioProject\room1.jfif" class="rounded float-start" alt="This is me">   </br>  </div>
+               <br><img src="room.jfif" class="rounded float-start" alt="      "> </br> </div>
+               <br> <img src="room1.jfif" class="rounded float-start" alt="     ">   </br>  </div>
               </div>
         
               <div class="row">
