--- a/HTML_Portfolio_Project.html
+++ b/HTML_Portfolio_Project.html
@@ -12,7 +12,7 @@
     </style>
 </head>
 <body>
-  <h1 style="color:rgb(45, 146, 247);">Welcome to Home for Rent</h1>
+  <h1 style="color:rgb(45, 146, 247);>"Welcome to Home for Rent</h1>
 </body>
 </html>
     <div class="container-fluid">
