--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
            background-color: aqua;
         }
     </style>
-    <title>My Website</title>
+    
 </head>
 <body>
     <h1 class= "blue">Welcome to Home for Rent</h1>
@@ -22,13 +22,13 @@
           <div class="container-fluid">
              <ul class="navbar-nav me-auto">
                <br><li class="nav-item active">
-                 <a class="nav-link text-center" href="#">HOME </a></br>
+                 <a class="nav-link text-center" href="#HOME">HOME </a></br>
                 </li>
                 <br><li class="nav-item active">
-                  <a class="nav-link" href="#">ABOUT</a></br>
+                  <a class="nav-link" href="#ABOUT">ABOUT</a></br>
                 </li>
                 <br><li class="nav-item active">
-                    <a class="nav-link" href="#">CONTACT</a></br>
+                    <a class="nav-link" href="#CONTACT">CONTACT</a></br>
                 </li> 
             </ul>
               
