--- a/PorforlioWebsite.html
+++ b/PorforlioWebsite.html
@@ -54,8 +54,8 @@
          <div class="container">
             <h3style="color:rgb(13, 109, 40);">ABOUT</h3>
             
-               <br><img src="C:\Users\Rodil\Documents\Desktop\PortfolioProject\room.jfif" class="rounded float-start" alt="This is me"> </br> </div>
-               <br> <img src="C:\Users\Rodil\Documents\Desktop\PortfolioProject\room1.jfif" class="rounded float-start" alt="This is me">   </br>  </div>
+               <br><img src="room.jfif" class="rounded float-start" alt="This is me"> </br> </div>
+               <br> <img src="https://github.com/rodilconcha/PortfolioWebsite/edit/main/PorforlioWebsite.html#:~:text=room.jfif-,room1.jfif,-Editing%20PorforlioWebsite.html" class="rounded float-start" alt="This is me">   </br>  </div>
               </div>
               <div class="row">
                 <div class="col">
