--- a/PorforlioWebsite.html
+++ b/PorforlioWebsite.html
@@ -54,9 +54,8 @@
          <div class="container">
             <h3style="color:rgb(13, 109, 40);">ABOUT</h3>
             
-               <br><img src="room.jfif"  alt="This is me" style=style="width:128px;height:128px;">
-               </br> </div>
-               <br> <img src=" room1.jfif" alt="This is me">   </br>  </div>
+               <br><img src="C:\Users\Rodil\Documents\Desktop\PortfolioProject\room.jfif" class="rounded float-start" alt="This is me"> </br> </div>
+               <br> <img src="C:\Users\Rodil\Documents\Desktop\PortfolioProject\room1.jfif" class="rounded float-start" alt="This is me">   </br>  </div>
               </div>
               <div class="row">
                 <div class="col">
